[package]
name = "fluent-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits", "full", "parsing", "visit"] }
walkdir = "2.4.0"
proc-macro2 = "1"
md5 = "0.7.0"

